Menambahkan API Deteksi Mata pada halaman Main Pasien dan Mematikan Alert

--- a/app/src/main/res/layout/main_pasien.xml
+++ b/app/src/main/res/layout/main_pasien.xml
@@ -5,36 +5,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     android:gravity="center"
     tools:context=".Pasien">
 
     <ImageButton
         android:id="@+id/button_telfonDarurat"
-        android:layout_marginTop="50dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:background="@null"
-        app:srcCompat="@drawable/gambar_emergencycall" />
+        android:layout_marginTop="50dp"
+        android:background="#FFFFFF"
+        app:srcCompat="@drawable/gambar_emergency_call" />
 
     <ImageButton
         android:id="@+id/button_alert"
-        android:layout_marginTop="50dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/button_telfonDarurat"
         android:layout_centerHorizontal="true"
-        android:background="@null"
+        android:layout_marginTop="50dp"
+        android:background="#FFFFFF"
         app:srcCompat="@drawable/gambar_alert" />
 
-    <ImageButton
-        android:id="@+id/button_alarm"
-        android:layout_marginTop="50dp"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/time_view"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button_alert"
-        android:layout_centerHorizontal="true"
-        android:background="@null"
-        app:srcCompat="@drawable/gambar_alarm" />
+        android:text="TextView" />
 
 </RelativeLayout>
