--- a/app/src/main/res/layout/activity_daftar.xml
+++ b/app/src/main/res/layout/activity_daftar.xml
@@ -79,40 +79,33 @@
         android:layout_marginLeft="101dp"
         />
 
-    <RadioButton
-        android:id="@+id/radioButton_pasien"
+    <RadioGroup
+        android:id="@+id/radioGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView_Daftar"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="150dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="93dp"
-        android:layout_marginRight="95dp"
-        android:gravity="center"
-        android:text="Pasien" />
+        android:layout_centerHorizontal="true">
 
-    <RadioButton
-        android:id="@+id/radioButton_perawat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView_Daftar"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="93dp"
-        android:layout_marginLeft="93dp"
-        android:layout_marginTop="5dp"
-        android:gravity="center"
-        android:text="Perawat" />
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/radioButton_pasien"
+            android:text="@string/rbPasien"
+            />
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/radioButton_perawat"
+            android:text="@string/rbPerawat"
+            />
+
+    </RadioGroup>
 
     <ImageButton
         android:id="@+id/button_daftar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/radioButton_perawat"
+        android:layout_below="@+id/radioGroup"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
         android:background="@null"
